--- a/src/main/resources/templates/copies.html
+++ b/src/main/resources/templates/copies.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -143,7 +143,8 @@
 
 <div class="container">
     <div class="logout-container">
-        <form th:action="@{/logout}" method="post">
+        <a th:href="@{/login}" class="btn btn-login" sec:authorize="!isAuthenticated()">Log In</a>
+        <form th:action="@{/logout}" method="post" sec:authorize="isAuthenticated()">
             <button type="submit" class="btn btn-logout">Log Out</button>
         </form>
     </div>
@@ -152,7 +153,7 @@
         <h1>Book Copies Catalog</h1>
         <div class="d-flex justify-content-center mb-4">
             <a th:href="@{/books}" class="btn btn-catalog mx-2">Book Catalog</a>
-            <a th:href="@{/profile}" class="btn btn-profile mx-2">My Profile</a>
+            <a th:href="@{/profile}" class="btn btn-profile mx-2" sec:authorize="hasRole('ROLE_USER')">My Profile</a>
         </div>
         <div th:if="${not#lists.isEmpty(bookCopyReturnDtoList)}">
             <table class="table table-hover table-striped table-bordered">
@@ -164,10 +165,10 @@
                     <th>Rented by</th>
                     <th>Rental Start Date</th>
                     <th>Rental End Date</th>
-                    <th>Rent</th>
-                    <th>Return</th>
-                    <th>Update</th>
-                    <th>Delete</th>
+                    <th sec:authorize="hasRole('ROLE_USER')">Rent</th>
+                    <th sec:authorize="hasRole('ROLE_USER')">Return</th>
+                    <th sec:authorize="hasRole('ROLE_ADMIN')">Update</th>
+                    <th sec:authorize="hasRole('ROLE_ADMIN')">Delete</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -178,13 +179,10 @@
                     <td th:text="${bookCopyReturnDto.userId != null ? bookCopyReturnDto.userId : 'Not rented'}"></td>
                     <td th:text="${bookCopyReturnDto.rentalStartDate != null ? bookCopyReturnDto.rentalStartDate : 'N/A'}"></td>
                     <td th:text="${bookCopyReturnDto.rentalEndDate != null ? bookCopyReturnDto.rentalEndDate : 'N/A'}"></td>
-                    <td><a th:href="@{/copies/rent(id=${bookCopyReturnDto.id})}" class="btn btn-rent">Rent</a></td>
-                    <td><a th:href="@{/copies/return(id=${bookCopyReturnDto.id})}" class="btn btn-return">Return</a>
-                    </td>
-                    <td><a th:href="@{/copies/update(id=${bookCopyReturnDto.id})}" class="btn btn-update">Update</a>
-                    </td>
-                    <td><a th:href="@{/copies/delete(id=${bookCopyReturnDto.id})}" class="btn btn-delete">Delete</a>
-                    </td>
+                    <td sec:authorize="hasRole('ROLE_USER')"><a th:href="@{/copies/rent(id=${bookCopyReturnDto.id})}" class="btn btn-rent">Rent</a></td>
+                    <td sec:authorize="hasRole('ROLE_USER')"><a th:href="@{/copies/return(id=${bookCopyReturnDto.id})}" class="btn btn-return">Return</a></td>
+                    <td sec:authorize="hasRole('ROLE_ADMIN')"><a th:href="@{/copies/update(id=${bookCopyReturnDto.id})}" class="btn btn-update">Update</a></td>
+                    <td sec:authorize="hasRole('ROLE_ADMIN')"><a th:href="@{/copies/delete(id=${bookCopyReturnDto.id})}" class="btn btn-delete">Delete</a></td>
                 </tr>
                 </tbody>
             </table>
