--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -7,20 +7,25 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            background-color: #f8f9fa;
+            background-image: url('https://images.unsplash.com/photo-1505664194779-8beaceb93744?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8bGlicmFyeXxlbnwwfHwwfHx8MA%3D%3D');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            color: #343a40;
             padding: 20px;
         }
 
         h1 {
             text-align: center;
             margin-bottom: 30px;
-            color: #343a40;
+            color: #ffffff;
         }
 
         h2 {
             text-align: center;
             margin-top: 20px;
-            color: #495057;
+            color: #ffffff;
         }
 
         .table {
