--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -7,14 +7,19 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            background-color: #f8f9fa;
+            background-image: url('https://images.unsplash.com/photo-1505664063603-28e48ca204eb?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTV8fGRhcmslMjBsaWJyYXJ5fGVufDB8fDB8fHww');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            color: #343a40;
             padding: 20px;
         }
 
         h1 {
             text-align: center;
             margin-bottom: 30px;
-            color: #343a40;
+            color: #ffffff;
         }
 
         .table-container {
@@ -67,7 +72,7 @@
             background-color: #c0392b;
         }
 
-         .btn-create-user {
+        .btn-create-user {
             background-color: #28a745;
             color: white;
             font-size: 1.1rem;
