isbn not necessary

--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -71,7 +71,7 @@
         </div>
         <div class="mb-3">
             <label for="isbn" class="form-label">ISBN:</label>
-            <input type="text" id="isbn" class="form-control" th:field="*{isbn}" required />
+            <input type="text" id="isbn" class="form-control" th:field="*{isbn}"  />
         </div>
         <div class="mb-3">
             <label for="genre" class="form-label">Genre:</label>
